proc-macros/tests/ui/incorrect/method/method_no_name.stderr
error: Missing argument `name`
 --> $DIR/method_no_name.rs:6:4
  |
6 |     #[method()]
  |       ^^^^^^
